--- a/src/index.html
+++ b/src/index.html
@@ -50,6 +50,39 @@
                 </div>
             </div>
         </div>
+        <div class="advantages">
+            <div class="container">
+                <h2 class="title">НАШИ ПРИЕМУЩЕСТВА</h2>
+                <div class="advantages__wrapper">
+                    <div class="advantages__item">
+                        <img src="icons/advantages/cup.png" alt="cup" class="advantages__icon" />
+                        <div class="advantages__subtitle">Делимся опытом</div>
+                        <div class="advantages__descr">
+                            Наши сотрудники всегда готовы <br />
+                            поделиться своим опытом, <br />так как сами бегают полумарафоны, переплыли Босфор, готовятся к<br />
+                            соревнованиям по триатлону!
+                        </div>
+                    </div>
+                    <div class="advantages__item">
+                        <img src="icons/advantages/heart.png" alt="heart" class="advantages__icon" />
+                        <div class="advantages__subtitle">Заботимся о здоровье</div>
+                        <div class="advantages__descr">
+                            Мы работаем для того, <br />чтобы Ваши занятия спортом шли на<br />
+                            пользу Вашему здоровью и были в <br />радость Вам и Вашим близким!
+                        </div>
+                    </div>
+                    <div class="advantages__item">
+                        <img src="icons/advantages/shoe.png" alt="shoe" class="advantages__icon" />
+                        <div class="advantages__subtitle">Учим бегать</div>
+                        <div class="advantages__descr">
+                            Помогаем с обучением <br />правильной технике бега!<br />
+                            Дружим с крупнейшей школой бега в России -
+                            <a href="#">I LOVE RUNNING.</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
         <script src="js/script.js"></script>
     </body>
 </html>
