--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
         <title>Pulse</title>
         <link rel="stylesheet" href="css/bootstrap-reboot.min.css" />
         <link rel="stylesheet" href="css/font.css" />
+        <link rel="stylesheet" href="css/slick.css" />
         <link rel="stylesheet" href="css/style.min.css" />
     </head>
     <body>
@@ -106,7 +107,7 @@
             </div>
         </section>
 
-        <!-- <section class="carousel">
+        <section class="carousel">
             <div class="container">
                 <div class="carousel__inner">
                     <div>
@@ -120,7 +121,7 @@
                     </div>
                 </div>
             </div>
-        </section> -->
+        </section>
 
         <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
         <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery-migrate/1.2.1/jquery-migrate.min.js"></script>
