--- a/src/index.html
+++ b/src/index.html
@@ -97,9 +97,9 @@
                     Просто заполните форму заявки<br />
                     и мы перезвоним вам в течении 10 минут
                 </div>
-                <form class="feed-form" action="#">
+                <form id="consultation-form" class="feed-form" action="#">
                     <input name="name" required placeholder="Ваше имя" type="text" />
-                    <input name="phone" required placeholder="Ваш телефон" type="number" />
+                    <input name="phone" required placeholder="Ваш телефон" />
                     <input name="email" required placeholder="Ваш E-mail" type="email" />
 
                     <button class="button button_submit">заказать консультацию</button>
@@ -461,11 +461,11 @@
                 <div class="modal__subtitle">Ваш заказ:</div>
                 <div class="modal__descr">Пульсометр Polar FT1</div>
                 <form class="feed-form feed-form_mt25" action="#">
-                    <input name="name" placeholder="Ваше имя" type="text" />
-                    <input name="phone" placeholder="Ваш телефон" />
-                    <input name="email" placeholder="Ваш E-mail" type="email" />
+                    <input name="name" required placeholder="Ваше имя" type="text" />
+                    <input name="phone" required placeholder="Ваш телефон" />
+                    <input name="email" required placeholder="Ваш E-mail" type="email" />
 
-                    <button class="button button_submit">Купить</button>
+                    <button class="button button_submit">заказать консультацию</button>
                 </form>
             </div>
 
@@ -477,8 +477,11 @@
         </div>
 
         <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/intl-tel-input@23.0.10/build/css/intlTelInput.css" />
         <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery-migrate/1.2.1/jquery-migrate.min.js"></script>
         <script src="js/slick.min.js"></script>
+        <script src="js/jquery.validate.min.js"></script>
+        <script src="js/jquery.maskedinput.min.js"></script>
         <script src="js/script.js"></script>
     </body>
 </html>
