--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
         <link rel="stylesheet" href="css/style.min.css" />
     </head>
     <body>
-        <section class="promo">
+        <section class="promo" id="up">
             <div class="container">
                 <header class="header">
                     <a href="#" class="header__logo">
@@ -49,7 +49,7 @@
                     <button data-modal="consultation" class="button button_main">заказать кОНСУЛЬТАЦИЮ</button>
                     <div class="promo__link">
                         или
-                        <a href="#">ПЕРЕЙТИ В КАТАЛОГ</a>
+                        <a href="#catalog">ПЕРЕЙТИ В КАТАЛОГ</a>
                     </div>
                 </div>
             </div>
@@ -124,7 +124,7 @@
         </section>
         <section class="catalog">
             <div class="container">
-                <h2 class="title">Каталог пульсометров</h2>
+                <h2 class="title" id="catalog">Каталог пульсометров</h2>
                 <ul class="catalog__tabs">
                     <li class="catalog__tab catalog__tab_active"><div>Для фитнеса</div></li>
                     <li class="catalog__tab"><div>для бега</div></li>
@@ -475,6 +475,9 @@
                 <div class="modal__descr">Наш менеджер свяжется с вами в ближайшее время!</div>
             </div>
         </div>
+        <a href="#up" class="pageup">
+            <img src="icons/up.svg" alt="up" >
+        </a>
 
         <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/intl-tel-input@23.0.10/build/css/intlTelInput.css" />
