--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
         <link rel="stylesheet" href="css/font.css" />
         <link rel="stylesheet" href="css/slick.css" />
         <link rel="stylesheet" href="css/style.min.css" />
+        <link rel="stylesheet" href="css/animate.css">
     </head>
     <body>
         <section class="promo" id="up">
@@ -68,7 +69,7 @@
                         </div>
                     </div>
                     <div class="advantages__item">
-                        <img src="icons/advantages/heart.png" alt="heart" class="advantages__icon" />
+                        <img src="icons/advantages/heart.png" alt="heart" class="advantages__icon advantages__icon_animated" />
                         <div class="advantages__subtitle">Заботимся о здоровье</div>
                         <div class="advantages__descr">
                             Мы работаем для того, чтобы Ваши занятия спортом шли на пользу Вашему здоровью и были в радость Вам и Вашим близким!
@@ -140,13 +141,16 @@
                                 <div class="catalog-item__descr">Для первых шагов в тренировках, основанных на сердечном ритме</div>
                                 <a href="#" class="catalog-item__link">ПОДРОБНЕЕ</a>
                             </div>
-                            <ul class="catalog-item__list">
+                            
+                            <div class="catalog-item__list">
                                 <li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
                                 <li>Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
                                 <li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
                                 <li>Вы сможете посмотреть данные по 10 тренировкам.</li>
                                 <a href="#" class="catalog-item__back">назад</a>
-                            </ul>
+
+                            </div>
+                            
                         </div>
                         <hr />
 
@@ -166,13 +170,13 @@
                                 <div class="catalog-item__descr">Пульсометр начального уровня с комфортным тканевым ремешком</div>
                                 <a href="#" class="catalog-item__link">ПОДРОБНЕЕ</a>
                             </div>
-                            <ul class="catalog-item__list">
+                            <div class="catalog-item__list">
                                 <li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
                                 <li>Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
                                 <li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
                                 <li>Вы сможете посмотреть данные по 10 тренировкам.</li>
                                 <a href="#" class="catalog-item__back">назад</a>
-                            </ul>
+                            </div>
                         </div>
                         <hr />
 
@@ -192,13 +196,13 @@
                                 <div class="catalog-item__descr">Для первых шагов в тренировках, основанных на сердечном ритме</div>
                                 <a href="#" class="catalog-item__link">ПОДРОБНЕЕ</a>
                             </div>
-                            <ul class="catalog-item__list">
+                            <div class="catalog-item__list">
                                 <li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
                                 <li>Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
                                 <li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
                                 <li>Вы сможете посмотреть данные по 10 тренировкам.</li>
                                 <a href="#" class="catalog-item__back">назад</a>
-                            </ul>
+                            </div>
                         </div>
                         <hr />
 
@@ -218,13 +222,13 @@
                                 <div class="catalog-item__descr">Для первых шагов в тренировках, основанных на сердечном ритме</div>
                                 <a href="#" class="catalog-item__link">ПОДРОБНЕЕ</a>
                             </div>
-                            <ul class="catalog-item__list">
+                            <div class="catalog-item__list">
                                 <li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
                                 <li>Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
                                 <li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
                                 <li>Вы сможете посмотреть данные по 10 тренировкам.</li>
                                 <a href="#" class="catalog-item__back">назад</a>
-                            </ul>
+                            </div>
                         </div>
                         <hr />
 
@@ -244,13 +248,13 @@
                                 <div class="catalog-item__descr">Пульсометр начального уровня с комфортным тканевым ремешком</div>
                                 <a href="#" class="catalog-item__link">ПОДРОБНЕЕ</a>
                             </div>
-                            <ul class="catalog-item__list">
+                            <div class="catalog-item__list">
                                 <li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
                                 <li>Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
                                 <li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
                                 <li>Вы сможете посмотреть данные по 10 тренировкам.</li>
                                 <a href="#" class="catalog-item__back">назад</a>
-                            </ul>
+                            </div>
                         </div>
                         <hr />
 
@@ -270,13 +274,13 @@
                                 <div class="catalog-item__descr">Улучшенная версия Polar FT1, имеющая следующие улучшения:</div>
                                 <a href="#" class="catalog-item__link">ПОДРОБНЕЕ</a>
                             </div>
-                            <ul class="catalog-item__list">
+                            <div class="catalog-item__list">
                                 <li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
                                 <li>Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
                                 <li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
                                 <li>Вы сможете посмотреть данные по 10 тренировкам.</li>
                                 <a href="#" class="catalog-item__back">назад</a>
-                            </ul>
+                            </div>
                         </div>
                         <hr />
 
@@ -298,13 +302,13 @@
                                 <div class="catalog-item__descr">Для первых шагов в тренировках, основанных на сердечном ритме</div>
                                 <a href="#" class="catalog-item__link">ПОДРОБНЕЕ</a>
                             </div>
-                            <ul class="catalog-item__list">
+                            <div class="catalog-item__list">
                                 <li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
                                 <li>Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
                                 <li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
                                 <li>Вы сможете посмотреть данные по 10 тренировкам.</li>
                                 <a href="#" class="catalog-item__back">назад</a>
-                            </ul>
+                            </div>
                         </div>
                         <hr />
 
@@ -326,13 +330,13 @@
                                 <div class="catalog-item__descr">Для первых шагов в тренировках, основанных на сердечном ритме</div>
                                 <a href="#" class="catalog-item__link">ПОДРОБНЕЕ</a>
                             </div>
-                            <ul class="catalog-item__list">
+                            <div class="catalog-item__list">
                                 <li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
                                 <li>Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
                                 <li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
                                 <li>Вы сможете посмотреть данные по 10 тренировкам.</li>
                                 <a href="#" class="catalog-item__back">назад</a>
-                            </ul>
+                            </div>
                         </div>
                         <hr />
 
@@ -352,13 +356,13 @@
                                 <div class="catalog-item__descr">Для первых шагов в тренировках, основанных на сердечном ритме</div>
                                 <a href="#" class="catalog-item__link">ПОДРОБНЕЕ</a>
                             </div>
-                            <ul class="catalog-item__list">
+                            <div class="catalog-item__list">
                                 <li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
                                 <li>Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
                                 <li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
                                 <li>Вы сможете посмотреть данные по 10 тренировкам.</li>
                                 <a href="#" class="catalog-item__back">назад</a>
-                            </ul>
+                            </div>
                         </div>
                         <hr />
 
@@ -376,7 +380,7 @@
         <section class="feed">
             <div class="container">
                 <h2 class="title">отзывы клиентов</h2>
-                <div class="feed__item">
+                <div class="feed__item fadeInUp wow" >
                     <img src="img/feed_1.png" alt="Ирина Иванченко" class="feed__img" />
                     <div class="feed__text">
                         <div class="feed__subtitle">Ирина Иванченко</div>
@@ -390,7 +394,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="feed__item">
+                <div class="feed__item fadeInUp wow">
                     <img src="img/feed_2.png" alt="Иван Сёмочкин" class="feed__img" />
                     <div class="feed__text">
                         <div class="feed__subtitle">Иван Сёмочкин</div>
@@ -403,7 +407,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="feed__item">
+                <div class="feed__item fadeInUp wow">
                     <img src="img/feed_3.png" alt="Юлия Дашкина" class="feed__img" />
                     <div class="feed__text">
                         <div class="feed__subtitle">Юлия Дашкина</div>
@@ -479,12 +483,12 @@
             <img src="icons/up.svg" alt="up" >
         </a>
 
-        <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/intl-tel-input@23.0.10/build/css/intlTelInput.css" />
-        <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery-migrate/1.2.1/jquery-migrate.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-migrate/1.2.1/jquery-migrate.min.js"></script>
         <script src="js/slick.min.js"></script>
         <script src="js/jquery.validate.min.js"></script>
         <script src="js/jquery.maskedinput.min.js"></script>
+        <script src="js/wow.min.js"></script>
         <script src="js/script.js"></script>
     </body>
 </html>
