--- a/src/index.html
+++ b/src/index.html
@@ -108,7 +108,7 @@
             </div>
         </section>
 
-        <section class="carousel">
+        <div class="carousel">
             <div class="container">
                 <div class="carousel__inner">
                     <div>
@@ -122,7 +122,7 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </div>
         <section class="catalog">
             <div class="container">
                 <h2 class="title" id="catalog">Каталог пульсометров</h2>
@@ -142,14 +142,14 @@
                                 <a href="#" class="catalog-item__link">ПОДРОБНЕЕ</a>
                             </div>
                             
-                            <div class="catalog-item__list">
+                            <ul class="catalog-item__list">
                                 <li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
                                 <li>Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
                                 <li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
                                 <li>Вы сможете посмотреть данные по 10 тренировкам.</li>
-                                <a href="#" class="catalog-item__back">назад</a>
+                            </ul>
+                            <a href="#" class="catalog-item__back">назад</a>
 
-                            </div>
                             
                         </div>
                         <hr />
@@ -170,13 +170,13 @@
                                 <div class="catalog-item__descr">Пульсометр начального уровня с комфортным тканевым ремешком</div>
                                 <a href="#" class="catalog-item__link">ПОДРОБНЕЕ</a>
                             </div>
-                            <div class="catalog-item__list">
+                            <ul class="catalog-item__list">
                                 <li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
                                 <li>Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
                                 <li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
                                 <li>Вы сможете посмотреть данные по 10 тренировкам.</li>
                                 <a href="#" class="catalog-item__back">назад</a>
-                            </div>
+                            </ul>
                         </div>
                         <hr />
 
@@ -196,13 +196,13 @@
                                 <div class="catalog-item__descr">Для первых шагов в тренировках, основанных на сердечном ритме</div>
                                 <a href="#" class="catalog-item__link">ПОДРОБНЕЕ</a>
                             </div>
-                            <div class="catalog-item__list">
+                            <ul class="catalog-item__list">
                                 <li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
                                 <li>Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
                                 <li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
                                 <li>Вы сможете посмотреть данные по 10 тренировкам.</li>
                                 <a href="#" class="catalog-item__back">назад</a>
-                            </div>
+                            </ul>
                         </div>
                         <hr />
 
@@ -222,13 +222,13 @@
                                 <div class="catalog-item__descr">Для первых шагов в тренировках, основанных на сердечном ритме</div>
                                 <a href="#" class="catalog-item__link">ПОДРОБНЕЕ</a>
                             </div>
-                            <div class="catalog-item__list">
+                            <ul class="catalog-item__list">
                                 <li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
                                 <li>Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
                                 <li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
                                 <li>Вы сможете посмотреть данные по 10 тренировкам.</li>
                                 <a href="#" class="catalog-item__back">назад</a>
-                            </div>
+                            </ul>
                         </div>
                         <hr />
 
@@ -248,13 +248,13 @@
                                 <div class="catalog-item__descr">Пульсометр начального уровня с комфортным тканевым ремешком</div>
                                 <a href="#" class="catalog-item__link">ПОДРОБНЕЕ</a>
                             </div>
-                            <div class="catalog-item__list">
+                            <ul class="catalog-item__list">
                                 <li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
                                 <li>Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
                                 <li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
                                 <li>Вы сможете посмотреть данные по 10 тренировкам.</li>
                                 <a href="#" class="catalog-item__back">назад</a>
-                            </div>
+                            </ul>
                         </div>
                         <hr />
 
@@ -274,13 +274,13 @@
                                 <div class="catalog-item__descr">Улучшенная версия Polar FT1, имеющая следующие улучшения:</div>
                                 <a href="#" class="catalog-item__link">ПОДРОБНЕЕ</a>
                             </div>
-                            <div class="catalog-item__list">
+                            <ul class="catalog-item__list">
                                 <li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
                                 <li>Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
                                 <li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
                                 <li>Вы сможете посмотреть данные по 10 тренировкам.</li>
                                 <a href="#" class="catalog-item__back">назад</a>
-                            </div>
+                            </ul>
                         </div>
                         <hr />
 
@@ -302,13 +302,13 @@
                                 <div class="catalog-item__descr">Для первых шагов в тренировках, основанных на сердечном ритме</div>
                                 <a href="#" class="catalog-item__link">ПОДРОБНЕЕ</a>
                             </div>
-                            <div class="catalog-item__list">
+                            <ul class="catalog-item__list">
                                 <li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
                                 <li>Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
                                 <li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
                                 <li>Вы сможете посмотреть данные по 10 тренировкам.</li>
                                 <a href="#" class="catalog-item__back">назад</a>
-                            </div>
+                            </ul>
                         </div>
                         <hr />
 
@@ -330,13 +330,13 @@
                                 <div class="catalog-item__descr">Для первых шагов в тренировках, основанных на сердечном ритме</div>
                                 <a href="#" class="catalog-item__link">ПОДРОБНЕЕ</a>
                             </div>
-                            <div class="catalog-item__list">
+                            <ul class="catalog-item__list">
                                 <li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
                                 <li>Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
                                 <li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
                                 <li>Вы сможете посмотреть данные по 10 тренировкам.</li>
                                 <a href="#" class="catalog-item__back">назад</a>
-                            </div>
+                            </ul>
                         </div>
                         <hr />
 
@@ -356,13 +356,13 @@
                                 <div class="catalog-item__descr">Для первых шагов в тренировках, основанных на сердечном ритме</div>
                                 <a href="#" class="catalog-item__link">ПОДРОБНЕЕ</a>
                             </div>
-                            <div class="catalog-item__list">
+                            <ul class="catalog-item__list">
                                 <li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
                                 <li>Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
                                 <li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
                                 <li>Вы сможете посмотреть данные по 10 тренировкам.</li>
                                 <a href="#" class="catalog-item__back">назад</a>
-                            </div>
+                            </ul>
                         </div>
                         <hr />
 
@@ -426,11 +426,8 @@
         </section>
 
         <footer class="footer">
-            <iframe
+            <iframe class="footer__map"
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1737.0267448501186!2d37.64624047364648!3d55.76831563990905!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46b54a636edcd2ad%3A0x4c2ca101e2c8c617!2z0JzRj9GB0L3QuNGG0LrQuNC5INC_0YAt0LQsIDQvMywg0JzQvtGB0LrQstCwLCDQoNC-0YHRgdC40Y8sIDEwNzA3OA!5e0!3m2!1sru!2sua!4v1559894689029!5m2!1sru!2sua"
-                width="100%"
-                height="630"
-                frameborder="0"
                 style="border: 0"
                 allowfullscreen
             ></iframe>
